--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://nikolanb1.github.io/shady_hippo",
   "name": "shady_hippo",
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
