--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shady_hippo",
-  "homepage": "/",
+  "homepage": "https://github.com/username/shady_hippo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
