--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nikolanb1.github.io/shady_hippo/#/",
+  "homepage": "http://shady_hippo.fun",
   "name": "shady_hippo",
   "version": "0.1.0",
   "private": true,
